right-eyebrow!!! + padding fix for giant lemon on mobile

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -473,8 +473,14 @@ textarea {
     color: #515151;
     font-size: 1.125rem;
     z-index: 30;
-    padding-top: 150px;
+    padding-top: 80px;
     padding-bottom: 0px; }
+    @media (min-width: 768px) {
+      #content #other-links {
+        padding-top: 120px; } }
+    @media (min-width: 992px) {
+      #content #other-links {
+        padding-top: 150px; } }
     #content #other-links p:nth-child(2) a:link,
     #content #other-links p:nth-child(2) a:visited {
       transition: 0.25s;
